--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>turtle</name>
   <version>0.0.0</version>
   <description>My effort to build a turtlebot</description>
-  <maintainer email="kartikvenkatesh13@gmail.com">MY NAME</maintainer>
+  <maintainer email="kartikvenkatesh13@gmail.com">Kartikeyan Venkatesh</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
